Readme and guides

--- a/TA-ob-openai-chatgpt/default/searchbnf.conf
+++ b/TA-ob-openai-chatgpt/default/searchbnf.conf
@@ -14,5 +14,9 @@ description = Send prompts to ChatGPT with selected parameters and a role. \i\\
 
 
 comment1 = find sensitive information if the field text_message
-example1 = | obopenai mode="dlp" prompt=text_message model="gpt-3.5-turbo" temperature="0.8"
+example1 = ... | obopenai mode="dlp" prompt=text_message model="gpt-3.5-turbo" temperature="0.8"
+
+comment2 = converse with gpt
+example2 = ... | obopenai mode="conv" prompt=text_message conversation=conv_field model="gpt-4"
+
 usage = public
